--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,25 @@
   }
 }
 
+/* 定义中文字体 */
+@font-face {
+  font-family: 'HanyiSentyPea';
+  src: url('../../public/fonts/HanyiSentyPea.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* 定义英文字体 */
+@font-face {
+  font-family: 'Hand';
+  src: url('../../public/fonts/HANDM___.TTF') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* 使用手写字体 */
+  font-family: 'HanyiSentyPea', 'Hand', Arial, Helvetica, sans-serif;
 }
